--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -31,4 +31,4 @@ jobs:
    
     - name: Test with unittest
       run: |
-        python -m unittest discover tests
+        python -m unittest discover -v tests
